--- a/src/components/pages/glossaire-ux-design/Hero.astro
+++ b/src/components/pages/glossaire-ux-design/Hero.astro
@@ -12,6 +12,6 @@ import CommonPageHero from "../../CommonPageHero.astro";
 
 <style>
   div :global(h2) {
-    @apply col-span-full 2xl:col-start-2 2xl:col-span-7;
+    @apply col-span-full lg:col-start-2 lg:col-span-7;
   }
 </style>
