--- a/src/components/pages/homepage/Expertises/index.astro
+++ b/src/components/pages/homepage/Expertises/index.astro
@@ -46,7 +46,7 @@ import Expertise from "./Expertise.astro";
                 {index === 2 && (
                   <Brush
                     id="1"
-                    class="hidden 2xl:block absolute top-[-89px] left-[-102px] z-[-1] w-[222px] h-[263px] rotate-[180deg]"
+                    class="hidden lg:block absolute top-[-89px] left-[-102px] z-[-1] w-[222px] h-[263px] rotate-[180deg]"
                   />
                 )}
               </li>
