--- a/src/components/pages/nos-deux-profils/ItsAMatch.astro
+++ b/src/components/pages/nos-deux-profils/ItsAMatch.astro
@@ -17,18 +17,18 @@ import TeamUXStamp from "../../TeamUXStamp.astro";
       </div>
 
       <h3
-        class="mt-[60px] mb-5 2xl:mb-10 text-headline-extra-large 2xl:text-display-small text-center"
+        class="mt-[60px] mb-5 lg:mb-10 text-headline-extra-large lg:text-display-small text-center"
       >
         {data.title}
       </h3>
       <Grid>
         <p
-          class="col-span-full 2xl:col-start-4 2xl:col-span-6 mb-10 text-body-large 2xl:text-body-extra-large 2xl:text-center"
+          class="col-span-full lg:col-start-4 lg:col-span-6 mb-10 text-body-large lg:text-body-extra-large lg:text-center"
         >
           {data.content}
         </p>
 
-        <div class="col-span-full 2xl:col-start-2 2xl:col-span-10">
+        <div class="col-span-full lg:col-start-2 lg:col-span-10">
           <CallToAction
             type="secondary"
             rightIcon="open_in_new"
@@ -37,12 +37,12 @@ import TeamUXStamp from "../../TeamUXStamp.astro";
             Page LinkedIn de Team UX
           </CallToAction>
 
-          <div class="px-5 py-6 2xl:p-10 bg-surface5 rounded-[26px]">
+          <div class="px-5 py-6 lg:p-10 bg-surface5 rounded-[26px]">
             <h3 class="mb-10 text-headline-medium-bold">
               Voici comment nous travaillons
             </h3>
             <ul
-              class="flex flex-col gap-11 2xl:gap-0 2xl:flex-row items-center justify-between isolate"
+              class="flex flex-col gap-11 lg:gap-0 lg:flex-row items-center justify-between isolate"
             >
               <li>
                 <Brush
@@ -50,7 +50,7 @@ import TeamUXStamp from "../../TeamUXStamp.astro";
                   class="absolute z-[-1] w-[100px] h-[119px] left-0 top-[-7px] translate-x-1/2 opacity-20"
                 />
                 <Icon name="softskill-details" />
-                <span class="text-label-medium 2xl:text-label-large"
+                <span class="text-label-medium lg:text-label-large"
                   >Sens du travail</span
                 >
               </li>
@@ -60,7 +60,7 @@ import TeamUXStamp from "../../TeamUXStamp.astro";
                   class="absolute z-[-1] w-[100px] h-[119px] left-0 top-[-7px] rotate-[180deg] translate-x-1/2 opacity-20"
                 />
                 <Icon name="softskill-kindness" />
-                <span class="text-label-medium 2xl:text-label-large"
+                <span class="text-label-medium lg:text-label-large"
                   >Bienveillance</span
                 >
               </li>
@@ -70,7 +70,7 @@ import TeamUXStamp from "../../TeamUXStamp.astro";
                   class="absolute z-[-1] w-[100px] h-[119px] left-0 top-[-7px] translate-x-1/2 opacity-20"
                 />
                 <Icon name="softskill-fiability" />
-                <span class="text-label-medium 2xl:text-label-large"
+                <span class="text-label-medium lg:text-label-large"
                   >Fiabilité</span
                 >
               </li>
@@ -80,7 +80,7 @@ import TeamUXStamp from "../../TeamUXStamp.astro";
                   class="absolute z-[-1] w-[100px] h-[119px] left-0 top-[-7px] rotate-[180deg] translate-x-1/2 opacity-20"
                 />
                 <Icon name="softskill-sincerity" />
-                <span class="text-label-medium 2xl:text-label-large"
+                <span class="text-label-medium lg:text-label-large"
                   >Sincérité</span
                 >
               </li>
@@ -90,7 +90,7 @@ import TeamUXStamp from "../../TeamUXStamp.astro";
                   class="absolute z-[-1] w-[100px] h-[119px] left-0 top-[-7px] translate-x-1/2 opacity-20"
                 />
                 <Icon name="softskill-creative" />
-                <span class="text-label-medium 2xl:text-label-large"
+                <span class="text-label-medium lg:text-label-large"
                   >Force de proposition</span
                 >
               </li>
@@ -98,7 +98,7 @@ import TeamUXStamp from "../../TeamUXStamp.astro";
           </div>
         </div>
       </Grid>
-      <div class="mt-10 2xl:mt-[60px] pb-20 2xl:pb-[100px]">
+      <div class="mt-10 lg:mt-[60px] pb-20 lg:pb-[100px]">
         <CallToAction
           href="/notre-manifeste"
           type="primary"
