--- a/src/components/pages/notre-manifeste/Introduction.astro
+++ b/src/components/pages/notre-manifeste/Introduction.astro
@@ -6,22 +6,22 @@ import BackgroundForm1 from "../../BackgroundForm1.astro";
 ---
 
 <section
-  class="overflow-hidden pb-[328px] mb-[-328px] 2xl:pt-[350px] 2xl:mt-[-350px] 2xl:pb-[312px] 2xl:mb-[-312px]"
+  class="overflow-hidden pb-[328px] mb-[-328px] lg:pt-[350px] lg:mt-[-350px] lg:pb-[312px] lg:mb-[-312px]"
 >
   <div class="container">
     <Grid>
-      <div class="col-span-full 2xl:col-start-2 2xl:col-span-6">
+      <div class="col-span-full lg:col-start-2 lg:col-span-6">
         <div class="isolate relative">
           <Brush
             id="1"
-            class="absolute z-[-1] left-0 2xl:left-auto 2xl:right-[-202px] top-[calc(100%-60px)] 2xl:top-[-22px] w-[214px] h-[254px] 2xl:w-[321px] 2xl:h-[381px]"
+            class="absolute z-[-1] left-0 lg:left-auto lg:right-[-202px] top-[calc(100%-60px)] lg:top-[-22px] w-[214px] h-[254px] lg:w-[321px] lg:h-[381px]"
           />
           <Brush
             id="4"
-            class="absolute z-[-2] right-0 2xl:right-[-361px] top-[calc(100%-60px)] 2xl:top-[-22px] 2xl:w-[383px] 2xl:h-[381px] w-[255px] h-[254px]"
+            class="absolute z-[-2] right-0 lg:right-[-361px] top-[calc(100%-60px)] lg:top-[-22px] lg:w-[383px] lg:h-[381px] w-[255px] h-[254px]"
           />
           <BackgroundForm1
-            class="absolute z-[-3] right-[-395px] bottom-[-251px] 2xl:right-[-1060px] 2xl:bottom-[-160px]"
+            class="absolute z-[-3] right-[-395px] bottom-[-251px] lg:right-[-1060px] lg:bottom-[-160px]"
           />
           <div class="p-10 bg-surface7 rounded-[26px]">
             <p class="text-body-medium">
