--- a/src/components/pages/projets/AllProjects/LargeProject/index.astro
+++ b/src/components/pages/projets/AllProjects/LargeProject/index.astro
@@ -27,7 +27,7 @@ const hasManyTestimonials = Array.isArray(project.testimonial);
 ---
 
 <div
-  class="project flex flex-col gap-8 lg:gap-0 px-5 py-6 2xl:p-10 bg-neutral4 rounded-[26px]"
+  class="project flex flex-col gap-8 lg:gap-0 px-5 py-6 lg:p-10 bg-neutral4 rounded-[26px]"
 >
   <div class="flex flex-col lg:flex-row gap-8">
     <div class="flex flex-col gap-10 lg:flex-[0_0_40%]">
@@ -52,7 +52,7 @@ const hasManyTestimonials = Array.isArray(project.testimonial);
       </ul>
     </div>
     <div
-      class="flex flex-col gap-5 px-5 py-6 2xl:p-10 bg-surface5 rounded-[20px]"
+      class="flex flex-col gap-5 px-5 py-6 lg:p-10 bg-surface5 rounded-[20px]"
     >
       <h3 class="text-headline-medium-bold lg:text-headline-large">
         {project.description.title}
