--- a/src/components/pages/projets/AllProjects/SmallProject.astro
+++ b/src/components/pages/projets/AllProjects/SmallProject.astro
@@ -11,8 +11,8 @@ interface Props {
 const { project } = Astro.props;
 ---
 
-<div class="p-5 2xl:p-10 bg-surface5 rounded-[26px]">
-  <p class="mb-5 text-headline-small 2xl:text-label-large">
+<div class="p-5 lg:p-10 bg-surface5 rounded-[26px]">
+  <p class="mb-5 text-headline-small lg:text-label-large">
     {project.name}
   </p>
   <h3 class="mb-8 text-headline-medium-bold">
