--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -14,7 +14,7 @@ import Breadcrumb from "../components/Breadcrumb.astro";
     <Breadcrumb />
   </div>
 
-  <div class="mt-[60px] 2xl:mt-[129px] mb-[200px] 2xl:mb-56">
+  <div class="mt-[60px] lg:mt-[129px] mb-[200px] lg:mb-56">
     <CommonPageHero
       title="Page non trouvée..."
       subtitle="Oups, c’est une erreur 404 ! Le contenu que vous recherchez n'existe pas ou a été déplacé. Retournez à la <a href='/' class='text-primary underline underline-offset-[4px]'> page d'accueil</a>."
@@ -22,7 +22,7 @@ import Breadcrumb from "../components/Breadcrumb.astro";
     />
   </div>
 
-  <div class="mb-[150px] 2xl:mb-[170px]">
+  <div class="mb-[150px] lg:mb-[170px]">
     <Contact />
   </div>
 
