--- a/src/pages/glossaire-ux-design/index.astro
+++ b/src/pages/glossaire-ux-design/index.astro
@@ -24,7 +24,7 @@ import ScrollToTop from "../../components/ScrollToTop/index.astro";
     <Glossaire />
   </div>
 
-  <div class="mb-[150px] 2xl:mb-[170px]">
+  <div class="mb-[150px] lg:mb-[170px]">
     <Contact />
   </div>
 
