--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,19 +13,19 @@ import Footer from "../components/Footer.astro";
   title="Team UX ▷ 2 designers UX en freelance à Bordeaux"
   decription="Nous sommes Yuna & Daniela, l'extension UX de votre équipe produit. Nous adorons (dé)construire des produits complexes. ✓ UX design ✓ Éco-conception ✓ Accessibilité"
 >
-  <div class="mt-[60px] 2xl:mt-[129px] mb-[150px] 2xl:mb-[85px]">
+  <div class="mt-[60px] lg:mt-[129px] mb-[150px] lg:mb-[85px]">
     <Hero />
   </div>
 
-  <div class="mb-[100px] 2xl:mb-[140px]">
+  <div class="mb-[100px] lg:mb-[140px]">
     <Expertises />
   </div>
 
-  <div class="mb-[100px] 2xl:mb-[140px]">
+  <div class="mb-[100px] lg:mb-[140px]">
     <DerriereTeamUX />
   </div>
 
-  <div class="mb-[140px] 2xl:mb-[100px]">
+  <div class="mb-[140px] lg:mb-[100px]">
     <ProjectsTeasing />
   </div>
 
@@ -33,7 +33,7 @@ import Footer from "../components/Footer.astro";
     <Testimonials />
   </div>
 
-  <div class="mb-[150px] 2xl:mb-[170px]">
+  <div class="mb-[150px] lg:mb-[170px]">
     <Contact />
   </div>
 
