--- a/src/pages/mentions-legales/index.astro
+++ b/src/pages/mentions-legales/index.astro
@@ -19,11 +19,11 @@ import Content from "../../components/pages/mentions-legales/Content.astro";
     <Hero />
   </div>
 
-  <div class="mb-[200px] 2xl:mb-[160px]">
+  <div class="mb-[200px] lg:mb-[160px]">
     <Content />
   </div>
 
-  <div class="mb-[150px] 2xl:mb-[170px]">
+  <div class="mb-[150px] lg:mb-[170px]">
     <Contact showBackgroundForm={false} />
   </div>
 
