--- a/src/pages/nos-deux-profils/index.astro
+++ b/src/pages/nos-deux-profils/index.astro
@@ -15,19 +15,19 @@ import ItsAMatch from "../../components/pages/nos-deux-profils/ItsAMatch.astro";
   <div class="hidden lg:block md:mb-[90px]">
     <Breadcrumb />
   </div>
-  <div class="max-md:mt-[60px] mb-20 2xl:mb-[140px]">
+  <div class="max-md:mt-[60px] mb-20 lg:mb-[140px]">
     <Hero />
   </div>
 
-  <div class="mb-[100px] 2xl:mb-[140px]">
+  <div class="mb-[100px] lg:mb-[140px]">
     <Profiles />
   </div>
 
-  <div class="mb-[180px] 2xl:mb-[160px]">
+  <div class="mb-[180px] lg:mb-[160px]">
     <ItsAMatch />
   </div>
 
-  <div class="mb-[150px] 2xl:mb-[170px]">
+  <div class="mb-[150px] lg:mb-[170px]">
     <Contact />
   </div>
 
