--- a/src/pages/notre-manifeste/index.astro
+++ b/src/pages/notre-manifeste/index.astro
@@ -18,27 +18,27 @@ import Signatures from "../../components/pages/notre-manifeste/Signatures.astro"
     <Breadcrumb />
   </div>
 
-  <div class="max-md:mt-[60px] mb-20 2xl:mb-[140px]">
+  <div class="max-md:mt-[60px] mb-20 lg:mb-[140px]">
     <Hero />
   </div>
 
-  <div class="mb-[335px] 2xl:mb-[240px]">
+  <div class="mb-[335px] lg:mb-[240px]">
     <Introduction />
   </div>
 
-  <div class="mb-[100px] 2xl:mb-[144px]">
+  <div class="mb-[100px] lg:mb-[144px]">
     <Convictions />
   </div>
 
-  <div class="mb-[160px] 2xl:mb-[60px]">
+  <div class="mb-[160px] lg:mb-[60px]">
     <Actions />
   </div>
 
-  <div class="mb-[150px] 2xl:mb-[160px]">
+  <div class="mb-[150px] lg:mb-[160px]">
     <Signatures />
   </div>
 
-  <div class="mb-[150px] 2xl:mb-[170px]">
+  <div class="mb-[150px] lg:mb-[170px]">
     <Contact />
   </div>
 
