--- a/src/pages/projets/index.astro
+++ b/src/pages/projets/index.astro
@@ -16,15 +16,15 @@ import ScrollToTop from "../../components/ScrollToTop/index.astro";
     <Breadcrumb />
   </div>
 
-  <div class="max-md:mt-[60px] mb-20 2xl:mb-[140px]">
+  <div class="max-md:mt-[60px] mb-20 lg:mb-[140px]">
     <Hero />
   </div>
 
-  <div class="mb-40 2xl:mb-[170px]">
+  <div class="mb-40 lg:mb-[170px]">
     <AllProjects />
   </div>
 
-  <div class="mb-[150px] 2xl:mb-[170px]">
+  <div class="mb-[150px] lg:mb-[170px]">
     <Contact />
   </div>
 
