--- a/src/pages/temoignages/index.astro
+++ b/src/pages/temoignages/index.astro
@@ -15,7 +15,7 @@ import Layout from "../../layouts/Layout.astro";
     <Breadcrumb />
   </div>
 
-  <div class="max-sm:mt-[60px] mb-20 2xl:mb-[140px]">
+  <div class="max-sm:mt-[60px] mb-20 lg:mb-[140px]">
     <Hero />
   </div>
 
@@ -23,7 +23,7 @@ import Layout from "../../layouts/Layout.astro";
     <Testimonials />
   </div>
 
-  <div class="mb-[150px] 2xl:mb-[170px]">
+  <div class="mb-[150px] lg:mb-[170px]">
     <Contact />
   </div>
 
