--- a/src/components/pages/homepage/Hero.astro
+++ b/src/components/pages/homepage/Hero.astro
@@ -11,14 +11,15 @@ import DuoDeChoc from "../../DuoDeChoc.astro";
       <h1
         class="col-span-full lg:col-start-2 lg:col-span-9 mb-10 lg:mb-8 text-display-large"
       >
-        Nous sommes Yuna & Daniela, <span class="text-primary">l’extension UX freelance</span
+        Nous sommes Yuna & Daniela, <span class="text-primary"
+          >l’extension UX freelance</span
         > de votre équipe produit
       </h1>
       <div class="col-span-full lg:col-start-2 lg:col-span-6">
         <p class="our-work mb-5 text-body-large lg:text-body-extra-large">
-          Binôme de designers UX/UI seniors, notre travail est reconnu pour son efficacité et sa pertinence, en
-          particulier sur les produits numériques dits complexes que nous
-          adorons construire ou déconstruire.
+          Binôme de designers UX/UI seniors, notre travail est reconnu pour son
+          efficacité et sa pertinence, en particulier sur les produits
+          numériques dits complexes que nous adorons construire ou déconstruire.
         </p>
 
         <p class="text-body-large-bold lg:text-body-large mb-10">
@@ -32,7 +33,7 @@ import DuoDeChoc from "../../DuoDeChoc.astro";
       <div class="max-lg:hidden col-start-9 col-span-3">
         <div class="relative mt-[67px]">
           <BackgroundForm1
-            class="max-2xl:hidden absolute top-[-184px] right-[-580px] z-[-1]"
+            class="max-lg:hidden absolute top-[-184px] right-[-580px] z-[-1]"
           />
 
           <DuoDeChoc variant="big" />
