--- a/src/components/pages/homepage/ProjectsTeasing/index.astro
+++ b/src/components/pages/homepage/ProjectsTeasing/index.astro
@@ -11,7 +11,7 @@ const {
 } = data;
 ---
 
-<section class="overflow-hidden 2xl:pt-[52px] 2xl:-mt-[52px]">
+<section class="overflow-hidden lg:pt-[52px] lg:-mt-[52px]">
   <div class="container relative">
     <BackgroundForm1
       class="hidden lg:block absolute z-[-1] top-[95px] left-[-600px]"
