--- a/src/components/pages/mentions-legales/Section.astro
+++ b/src/components/pages/mentions-legales/Section.astro
@@ -8,7 +8,7 @@ const { title } = Astro.props;
 ---
 
 <section>
-  <h2 class="mb-6 2xl:mb-10 text-headline-extra-large 2xl:text-headline-large">
+  <h2 class="mb-6 lg:mb-10 text-headline-extra-large lg:text-headline-large">
     {title}
   </h2>
   <slot />
