--- a/src/components/pages/notre-manifeste/Signatures.astro
+++ b/src/components/pages/notre-manifeste/Signatures.astro
@@ -4,13 +4,13 @@ import Image from "../../@common/Image.astro";
 ---
 
 <section class="container">
-  <div class="flex justify-center mb-[50px] 2xl:mb-0">
+  <div class="flex justify-center mb-[50px] lg:mb-0">
     <TeamUXStamp />
   </div>
   <div
-    class="flex flex-col 2xl:flex-row items-center justify-center gap-[60px] 2xl:gap-8"
+    class="flex flex-col lg:flex-row items-center justify-center gap-[60px] lg:gap-8"
   >
-    <div class="flex flex-col items-center gap-2.5 2xl:gap-4">
+    <div class="flex flex-col items-center gap-2.5 lg:gap-4">
       <Image
         srcSet={["/images/signature-yuna.png"]}
         width={210}
