--- a/src/components/pages/plan-du-site/Content.astro
+++ b/src/components/pages/plan-du-site/Content.astro
@@ -5,9 +5,9 @@ import CallToAction from "../../@common/CallToAction.astro";
 
 <section class="container">
   <Grid>
-    <div class="col-span-full 2xl:col-start-2 2xl:col-span-6">
+    <div class="col-span-full lg:col-start-2 lg:col-span-6">
       <div
-        class="flex flex-col gap-8 2xl:gap-5 p-5 2xl:p-10 bg-neutral4 rounded-[26px]"
+        class="flex flex-col gap-8 lg:gap-5 p-5 lg:p-10 bg-neutral4 rounded-[26px]"
       >
         <h2 class="text-headline-small">Arborescence principale :</h2>
         <ul class="ml-7 list-disc list-outside !text-body-medium">
