--- a/src/components/pages/temoignages/Testimonials.astro
+++ b/src/components/pages/temoignages/Testimonials.astro
@@ -3,8 +3,8 @@ import data from "../../../data/temoignages/all-testimonials.yaml";
 import Testimonial from "../../Testimonial.astro";
 ---
 
-<section class="container mb-[200px] 2xl:mb-0">
-  <ul class="px-5 2xl:px-0 2xl:columns-3 2xl:gap-8 space-y-5">
+<section class="container mb-[200px] lg:mb-0">
+  <ul class="px-5 lg:px-0 lg:columns-3 lg:gap-8 space-y-5">
     {
       data.map((testimonial) => {
         return (
