--- a/src/pages/plan-du-site/index.astro
+++ b/src/pages/plan-du-site/index.astro
@@ -12,11 +12,11 @@ import Layout from "../../layouts/Layout.astro";
     <Breadcrumb />
   </div>
 
-  <div class="max-md:mt-[60px] mb-[60px] 2xl:mb-20">
+  <div class="max-md:mt-[60px] mb-[60px] lg:mb-20">
     <Hero />
   </div>
 
-  <div class="mb-[200px] 2xl:mb-20">
+  <div class="mb-[200px] lg:mb-20">
     <Content />
   </div>
 
